fix menu gap mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,7 +101,11 @@
 	list-style: none;
 	font-size: 1.5rem;
 	display: flex;
-	gap: 1.5rem;
+ }
+
+ .header-hero__menu-logo__container nav.header-hero__menu > ul > li
+ {
+	 margin-left: 1.5rem;
  }
 
  .header-hero__menu-logo__container nav.header-hero__menu > ul > li > a
